fixing the alignment problem of the dot hovering in navbar.css

--- a/client/src/components/navbar/navbar.css
+++ b/client/src/components/navbar/navbar.css
@@ -23,7 +23,6 @@
     align-items: center;
     justify-content: center;
     gap: 30px;
-
 }
 
 .menus .menu-item {
@@ -53,18 +52,19 @@
     height: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .other-details-item {
+    height: 100%;
+    width: calc(100%/4);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
     font-size: 1rem;
     text-transform: capitalize;
     transition: 0.3s;
-}
-
-.other-details-item:hover {
-    transform: scale(110%);
 }
 
 .other-details .dot {
@@ -73,31 +73,31 @@
     width: 10px;
     height: 10px;
     border-radius: 50%;
-    transition: 0.9s;
+    transition: 0.5s;
     background: var(--color);
     opacity: 0;
+    left: 0;
 }
 
 
 .other-details .other-details-item:hover~.dot {
-    transition: 0.5s;
     opacity: 1;
 }
 
 .other-details .other-details-item:nth-child(1):hover~.dot {
-    transform: translateX(-195px);
+    left: calc(12.5% - 5px); /* Center under 1st item (25% width container) */
 }
 
 .other-details .other-details-item:nth-child(2):hover~.dot {
-    transform: translateX(-66px);
+    left: calc(37.5% - 5px); /* Center under 2nd item */
 }
 
 .other-details .other-details-item:nth-child(3):hover~.dot {
-    transform: translateX(80px);
+    left: calc(62.5% - 5px); /* Center under 3rd item */
 }
 
 .other-details .other-details-item:nth-child(4):hover~.dot {
-    transform: translateX(210px);
+    left: calc(87.5% - 5px); /* Center under 4th item */
 }
 
 
